--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
-    "@chakra-ui/react": "^2.6.1",
+    "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^7.10.3",
@@ -18,11 +18,13 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.7",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-react": "^2.2.0",
     "eslint": "^8.41.0",
     "eslint-plugin-react": "^7.32.2",
-    "vite": "^3.2.6"
+    "react-icons": "^4.9.0",
+    "vite": "^3.2.7"
   }
 }
