--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@vitejs/plugin-react": "^2.2.0",
     "eslint": "^8.41.0",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.1",
     "react-icons": "^4.9.0",
     "vite": "^3.2.7"
   }
