--- a/package.json
+++ b/package.json
@@ -11,23 +11,25 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
-    "@chakra-ui/react": "^2.7.0",
+    "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^7.10.3",
+    "framer-motion": "^10.12.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@chakra-ui/anatomy": "^2.1.1",
+    "@chakra-ui/styled-system": "^2.9.1",
     "@jridgewell/sourcemap-codec": "^1.4.15",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react": "^4.0.1",
     "eslint": "^8.41.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "react-icons": "^4.9.0",
-    "vite": "^3.2.7"
+    "vite": "^4.3.9"
   }
 }
